# zero-epwing

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  book.c  book.h  convert.c  convert.h  font.c  font.h  gaiji.c  gaiji.h  gaiji.json  gaiji_table_daijisen.h  hooks.c  hooks.h  main.c  util.c  util.h
tables/: gaiji_table_chujiten.h  gaiji_table_daijirin.h  gaiji_table_daijisen.h  gaiji_table_genius.h  gaiji_table_kojien.h  gaiji_table_meikyojj.h  gaiji_table_meikyou.h  gaiji_table_snmkg99.h  gaiji_table_wadai5.h
