cmake_minimum_required(VERSION 3.5)
project(zero-epwing)
include_directories(eb)
link_directories(eb/eb/.libs jansson/lib)
add_executable(zero-epwing main.c book.c font.c convert.c hooks.c)
target_link_libraries(zero-epwing libm.a libeb.a libm.a libz.a libjansson.a)
if (WIN32)
    target_link_libraries(zero-epwing libiconv.a)
endif (WIN32)
